Auth working, goto dashboard on login

--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -15,7 +15,7 @@
               </ion-item>
             </div>
             <div class="ion-padding">
-              <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Log in</ion-button>
+              <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Sign Up</ion-button>
             </div>
             <div class="ion-text-center">
               <h4>Or</h4>
