--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-  dashboard works!
-</p>
+<ion-content>
+    <div class="ion-text-center" *ngIf="authService.userData as user">
+        <h3>Weights With Friends: Your user ID is {{user.uid}}</h3>
+      </div>
+    <div class="ion-padding">
+      <ion-button (click)="authService.SignOut()">Log Out</ion-button>
+    </div>
+</ion-content>
