--- a/src/app/components/verify-email/verify-email.component.html
+++ b/src/app/components/verify-email/verify-email.component.html
@@ -7,8 +7,8 @@
               <h3>Thank You for Registering</h3>
             </div>
 
-            <div class="ion-text-center" *ngIf="true">
-              <p>We have sent a confirmation email to <strong></strong>.</p>
+            <div class="ion-text-center" *ngIf="authService.userData as user">
+              <p>We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
               <p>Please check your email and click on the link to verify your email address.</p>
             </div>
 
