Add uploader service and fix button

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,10 +13,12 @@
 
     <ion-item-divider>
       <ion-list-header>
-          <ion-label>My Programs</ion-label>
-        <ion-button (click)="openAddProgramModal()" shape="round" size="small" fill="solid" slot="end">
-          <ion-icon name="add"></ion-icon>
-        </ion-button>
+        <ion-label>My Programs</ion-label>
+        <ion-buttons>
+          <ion-button (click)="openAddProgramModal()" shape="round" size="small" fill="clear" slot="end">
+            <ion-icon name="add"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-list-header>
     </ion-item-divider>
 
