--- a/src/app/components/tabs-page/tabs-page.component.html
+++ b/src/app/components/tabs-page/tabs-page.component.html
@@ -4,5 +4,9 @@
         <ion-icon name="home"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="history">
+        <i class="material-icons">history</i>
+        <ion-label>History</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
