Add program form initial work

--- a/src/app/components/add-program-modal/add-program-modal.component.html
+++ b/src/app/components/add-program-modal/add-program-modal.component.html
@@ -9,5 +9,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-    <app-add-program></app-add-program>
+    <form [formGroup]="myForm" (ngSubmit)="dismiss()">
+    </form>
 </ion-content>
