--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -30,19 +30,19 @@
       </ion-label>
     </ion-item>
 
-    <ion-item-divider>
-      <ion-list-header>
-        <ion-label>Followed Programs</ion-label>
-      </ion-list-header>
-    </ion-item-divider>
-  
-    <ion-item *ngFor="let program of followedPrograms$ | async">
-      <ion-label>
-        <!-- TODO: add click element to nav to workout page -->
-        <h2>{{program.name}}</h2>
-        <p>{{program.description}}</p>
-      </ion-label>
-    </ion-item>
+    <div *ngIf="(followedPrograms$ | async)?.length > 0">
+      <ion-item-divider>
+        <ion-list-header>
+          <ion-label>Followed Programs</ion-label>
+        </ion-list-header>
+      </ion-item-divider>
+      <ion-item *ngFor="let program of followedPrograms$ | async">
+        <ion-label>
+          <h2>{{program.name}}</h2>
+          <p>{{program.description}}</p>
+        </ion-label>
+      </ion-item>
+    </div>
     
   </ion-list>
 
